--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,5 +1,5 @@
+android.debug.obsoleteApi=true
+android.enableR8 = true
 android.enableJetifier=true
 android.useAndroidX=true
 org.gradle.jvmargs=-Xmx1536M
-#android.useAndroidX=true
-#android.enableJetifier=true
