--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,8 +29,7 @@ dependencies:
   flutter_appavailability: ^0.0.21
   device_calendar: ^0.1.0
   image_picker: ^0.5.0+3
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  flutter_typeahead: ^1.1.0
   cupertino_icons: ^0.1.2
 
 dev_dependencies:
@@ -94,6 +93,32 @@ flutter:
           weight: 300
         - asset: fonts/Kalam/Kalam-Regular.ttf
           weight: 400
+    - family: Roboto
+      fonts:
+        - asset: fonts/Roboto/Roboto-Black.ttf
+          weight: 900
+        - asset: fonts/Roboto/Roboto-BlackItalic.ttf
+          weight: 900
+        - asset: fonts/Roboto/Roboto-Bold.ttf
+          weight: 700
+        - asset: fonts/Roboto/Roboto-BoldItalic.ttf
+          weight: 700
+        - asset: fonts/Roboto/Roboto-Italic.ttf
+          weight: 400
+        - asset: fonts/Roboto/Roboto-Light.ttf
+          weight: 300
+        - asset: fonts/Roboto/Roboto-LightItalic.ttf
+          weight: 300
+        - asset: fonts/Roboto/Roboto-Medium.ttf
+          weight: 500
+        - asset: fonts/Roboto/Roboto-MediumItalic.ttf
+          weight: 500
+        - asset: fonts/Roboto/Roboto-Regular.ttf
+          weight: 400
+        - asset: fonts/Roboto/Roboto-Thin.ttf
+          weight: 100
+        - asset: fonts/Roboto/Roboto-ThinItalic.ttf
+          weight: 100
     - family: Satisfy
       fonts:
         - asset: fonts/Satisfy/Satisfy-Regular.ttf
