--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   firebase_messaging: ^4.0.0+1
   firebase_analytics: ^2.0.2+1
   charts_flutter: ^0.6.0
+  rounded_modal: ^1.0.0
   fluttertoast: ^3.0.1
   intl: ^0.15.7
   http: ^0.12.0+1
