--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,22 +15,22 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  firebase_core: ^0.3.1+1
-  firebase_messaging: ^4.0.0+1
-  firebase_analytics: ^2.0.2+1
+  firebase_core: ^0.4.0+8
+  firebase_messaging: ^5.1.2
+  firebase_analytics: ^4.0.2
   charts_flutter: ^0.6.0
-  rounded_modal: ^1.0.0
-  fluttertoast: ^3.0.1
-  intl: ^0.15.7
-  http: ^0.12.0+1
-  sqflite: ^1.1.1
-  path_provider: ^0.5.0+1
-  shared_preferences: ^0.5.1+1
-  connectivity: ^0.4.2
+  rounded_modal: ^1.0.1
+  fluttertoast: ^3.1.0
+  intl: ^0.15.8
+  http: ^0.12.0+2
+  sqflite: ^1.1.6+3
+  path_provider: ^1.2.0
+  shared_preferences: ^0.5.3+4
+  connectivity: ^0.4.3+6
   flutter_appavailability: ^0.0.21
-  device_calendar: ^0.1.0
-  image_picker: ^0.5.0+3
-  flutter_typeahead: ^1.1.0
+  device_calendar: ^0.2.1+1
+  image_picker: ^0.6.1
+  flutter_typeahead: ^1.6.1
   cupertino_icons: ^0.1.2
 
 dev_dependencies:
